gitops/solutions/module-custom-domain/gitops/apps/frontend/ui/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/aws-weight: '100'
    external-dns.alpha.kubernetes.io/set-identifier: '' # This will be replaced by the replacement
    external-dns.alpha.kubernetes.io/ttl: "10"
spec:
  ingressClassName: alb
  rules:
    - host: "" # This will be replaced by the replacement
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 80
